--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,59 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+
 }
+
+.container{
+    margin: 0px auto;
+    max-width: 1170px;
+}
+
+/* header */
+
+.h-jumbotron{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    background-color: #FF6900;
+}
+
+.h-row{
+    width: 100%;
+}
+
+.col-100{
+    width: calc(100% - 20px);
+    margin: 0px 10px;
+}
+
+.h-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo{
+    width: 150px;
+    margin: 20px 0px; 
+}
+
+.left-menu{
+    margin-right: 10px;
+
+}
+
+.right-menu{
+    margin-left: 10px;
+}
+
+.h-options{
+    font-weight: 700;
+    display: inline-block;
+    color: #fff;
+}
+
+/* fine header */
