--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,97 @@
 }
 
 /* fine header */
+
+/* main */
+
+.row{
+    width: 100%;
+    margin-top: 70px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.col-33{
+    width: calc(100% / 3 - 20px);
+    margin: 50px 10px;
+    position: relative;
+}
+
+.first-image{
+    width: 100%;
+}
+
+.second-image{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.col-33:hover .second-image{
+    display: block;
+}
+
+.heart-square{
+    width: 25px;
+    text-align: center;
+    position: absolute;
+    top: 10px;
+    right: 0;
+    background-color: #fff;
+}
+
+.heart{
+    font-size: 30px;
+}
+
+.rectangle{
+    width: 100%;
+    position: absolute;
+    display: flex;
+    bottom: 100px;
+    left: 0px;
+}
+
+.rectangle-content{
+    font-size: 0.7rem;
+    font-weight: 700;
+    display: inline-block;
+    color: #fff;
+}
+
+.red-rectangle{
+    padding: 0px 10px;
+    background-color: #FF0000;
+}
+
+.green-rectangle{
+    padding: 0px 10px;
+    margin-left: 3px;
+    background-color: #008000;
+}
+
+.brand{
+    font-size: 0.8rem;
+    color: #000;
+}
+
+.price{
+    font-weight: 600;
+    font-size: 0.9rem;
+    color: #FF0000;
+}
+
+h4{
+    text-transform: uppercase;
+}
+ 
+del{
+    display: inline-block;
+    font-size: 0.9rem;
+}
+
+/* fine main */
+
