--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@
 .h-options{
     font-weight: 700;
     display: inline-block;
-    color: #fff;
+    color: #FFFFFF;
 }
 
 /* fine header */
@@ -97,7 +97,7 @@
     position: absolute;
     top: 10px;
     right: 0;
-    background-color: #fff;
+    background-color: #FFFFFF;
 }
 
 .heart{
@@ -116,7 +116,7 @@
     font-size: 0.7rem;
     font-weight: 700;
     display: inline-block;
-    color: #fff;
+    color: #FFFFFF;
 }
 
 .red-rectangle{
@@ -132,7 +132,7 @@
 
 .brand{
     font-size: 0.8rem;
-    color: #000;
+    color: #000000;
 }
 
 .price{
@@ -152,3 +152,53 @@ del{
 
 /* fine main */
 
+/* footer */
+
+.f-jumbotron{
+    width: 100%;
+    background-color: #1A1A1A;
+}
+
+.f-row{
+    width: 100%;
+}
+
+.f-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #FFFFFF;
+}
+
+h3{
+    margin: 20px 0px 10px 0px;
+    font-size: 1.2rem;
+}
+
+.info{
+    margin-bottom: 40px;
+    margin-right: 10px;
+    font-size: 0.7rem;
+    display: inline-block;
+}
+
+h5{
+    margin: 0px 0px 10px 5px;
+    font-size: 1rem;
+}
+
+ul{
+    display: flex;
+    list-style: none;
+}
+
+.social-logos{
+    width: 25px;
+    margin: 5px;
+    padding: 2px;
+    text-align: center;
+    color: #000000;
+    background-color: #FFFFFF;   
+}
+
+/* fine footer */
